# vibe

./: .gitignore  .tempo  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISH.md  README.md  SETUP_CRATES_IO.md  demo_output.md  install.sh  release-plz.toml
.github/workflows/: ci.yml  pypi-publish.yml  release-plz.yml  release.yml  version-bump.yml
Formula/: vibe.rb
Project-specs/: timetrack-specification.md  timetrack-update-summary.md
dummy-projects/ai-chatbot/: .tempo
dummy-projects/devops-pipeline/: .tempo
dummy-projects/ecommerce-api/: .tempo
dummy-projects/mobile-banking/: .tempo
dummy-projects/social-media/: .tempo
examples/: basic_workflow.md
migrations/: 001_initial_schema.sql  001_minimal_schema.sql  002_features_schema.sql
python-package/: README.md
python-package/python-pkg/: MANIFEST.in  README.md  pyproject.toml  setup.py
python-package/python-pkg/tempo_cli/: main.py
python-package/python-pkg/tempo_cli.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python-package/python-pkg/tempo_tracker_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
python-package/python-pkg/vibe_cli/: __init__.py  main.py
python-package/python-pkg/vibe_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: publish_pypi.sh  sync_version.sh
shell-hooks/: vibe-hook.fish  vibe-hook.ps1  vibe-hook.sh
src/: lib.rs  main.rs  test_utils.rs
src/cli/: commands.rs  formatter.rs  mod.rs  reports.rs  types.rs
src/daemon/: main.rs  mod.rs  project_cache.rs  server.rs  state.rs
src/db/: advanced_queries.rs  connection.rs  migrations.rs  mod.rs  pool.rs  queries.rs
src/models/: calendar_event.rs  client_report.rs  config.rs  git_branch.rs  goal.rs  insight.rs  mod.rs  project.rs  session.rs  tag.rs  template.rs  time_estimate.rs  workspace.rs
src/services/: daemon_service.rs  mod.rs  project_service.rs  session_service.rs
src/ui/: dashboard.rs  formatter.rs  history.rs  interactive.rs  mod.rs  timer.rs  widgets.rs
src/utils/: config.rs  ipc.rs  mod.rs  paths.rs  validation.rs
tests/: integration_tests.rs
