[package]
name = "tempo-cli"
version = "0.2.6"
edition = "2021"
authors = ["Own Path <brandy.daryl@gmail.com>"]
description = "Automatic project time tracking CLI tool with beautiful terminal interface"
license = "MIT"
repository = "https://github.com/own-path/vibe"
homepage = "https://github.com/own-path/vibe"
documentation = "https://docs.rs/tempo-cli"
readme = "README.md"
keywords = ["time-tracking", "productivity", "cli", "terminal", "tui"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["examples/", ".github/", "docs/"]

[lib]
name = "tempo_cli"
path = "src/lib.rs"

[[bin]]
name = "tempo"
path = "src/main.rs"

[[bin]]
name = "tempo-daemon"
path = "src/daemon/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI framework
clap = { version = "4.0", features = ["derive", "color"] }
clap_complete = "4.0"

# Database
rusqlite = { version = "0.30", features = ["bundled", "chrono", "backup"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }

# File system notifications
notify = "6.0"

# System monitoring
sysinfo = "0.30"

# Logging
env_logger = "0.10"
log = "0.4"

# Configuration
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cross-platform utilities
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }

# System interface
libc = "0.2"

# Terminal UI
ratatui = "0.24"
crossterm = "0.27"

# Testing utilities
tempfile = "3.0"

# HTTP client for update checks
reqwest = { version = "0.12", features = ["json"] }

# Semantic versioning
semver = "1.0"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
