[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tempo-cli"
version = "0.1.0"
authors = [
    {name = "Own Path", email = "brandy.daryl@gmail.com"},
]
description = "Automatic project time tracking CLI tool with beautiful terminal interface"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
    "Topic :: Utilities",
    "Environment :: Console",
]
keywords = ["time-tracking", "productivity", "cli", "terminal", "rust"]

[project.urls]
Homepage = "https://github.com/own-path/tempo"
"Bug Tracker" = "https://github.com/own-path/tempo/issues"
"Documentation" = "https://github.com/own-path/tempo/blob/main/README.md"
"Source Code" = "https://github.com/own-path/tempo"

[project.scripts]
tempo = "tempo_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tempo_cli*"]