[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tempo-cli"
version = "0.2.6"
authors = [
    {name = "Own Path", email = "brandy.daryl@gmail.com"},
]
description = "The Most Advanced Automatic Project Time Tracker - Lightning-fast Rust-powered CLI"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Tools",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "Environment :: Console",
]
keywords = [
    "time-tracking", "productivity", "cli", "terminal", "rust", 
    "project-management", "goals", "analytics", "developer-tools",
    "workspace", "session-tracking", "automatic", "daemon"
]

[project.urls]
Homepage = "https://github.com/own-path/vibe"
"Bug Tracker" = "https://github.com/own-path/vibe/issues"
"Documentation" = "https://docs.rs/tempo"
"Source Code" = "https://github.com/own-path/vibe"
"PyPI" = "https://pypi.org/project/tempo-cli/"

[project.scripts]
tempo = "tempo_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tempo_cli*"]